[project]
name = "happy-little-helpers"
version = "0.0.3"
authors = [
    { name = "wyattlovesgrapes", email = "wyattlovesgrapes@gmail.com" }
]
description = "a collection of happy little helpers."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wyattlovesgrapes/happy-little-helpers"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
